# auth-service

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth.py  roles.py  users.py
app/core/: database.py  metrics.py  redis_client.py
app/models/: user.py
app/schemas/: auth.py
app/services/: auth_service.py  role_service.py  user_service.py
scripts/: __init__.py  create_superuser.py  init-db.sql  migrate.py
tests/: __init__.py  conftest.py  test_auth.py  test_auth_service.py
